[package]
name = "quantum-wall"
version = "0.1.0"
edition = "2021"
authors = ["QuantumAgainstTheWall Contributors"]
description = "Quantum entropy computation at scale via tensor networks (MPS)"
license = "UNLICENSED"
repository = "https://github.com/Ununp3ntium115/QuantumAgainstTheWall"
keywords = ["quantum", "entropy", "tensor-network", "mps", "wasm"]
categories = ["science", "mathematics", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
wasm = ["wasm-bindgen", "console_error_panic_hook"]

[dependencies]
ndarray = "0.16"
num-complex = "0.4"
num-traits = "0.2"

# Optional WASM dependencies
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ndarray-linalg = { version = "0.16", features = ["openblas-system"], optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1
